# transgate

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp  transgate.json
src/: transgate.cc
src/base/: linuxfile.h
src/core/: config_provider.cc  content_provider.cc  content_provider.h  fastcgi_manager.cc  user.cc  user_manager.cc  user_manager.h
src/core/providers/: fastcgi_provider.h  null_provider.h  provider.cc  static_provider.cc
src/fastcgi/: fastcgi.cc  fcgifwd.h
src/http/: http_request.h  http_types.h
src/net/: epoll.h  inet_address.h  tcp_client.cc  tcp_client.h  tcp_socket.h  write_loop.cc
src/utils/: char_buffer.cc  file_proxy.cc  file_proxy.h  file_reader.cc  file_reader.h  generic_buffer.h  string_view.h
transgate/base/: copyable.h  linuxfile.h  noncopyable.h
transgate/core/: config_provider.cc  config_provider.h  content_provider.cc  content_provider.h  core_marks.h  fastcgi_manager.cc  fastcgi_manager.h  tg.cc  tg.h  user.cc  user.h  user_manager.cc  user_manager.h
transgate/core/providers/: fastcgi_provider.cc  fastcgi_provider.h  provider.cc  provider.h  static_provider.cc  static_provider.h
transgate/fastcgi/: fastcgi.cc  fcgi_types.h  fcgifwd.h
transgate/http/: http_parser.cc  http_parser.h  http_provider.cc  http_provider.h  http_request.cc  http_request.h  http_types.h  http_user.cc  http_user.h
transgate/net/: byteorder.cc  byteorder.h  epoll.cc  epoll.h  epoll_event.h  epoll_event_result.h  inet_address.cc  inet_address.h  tcp_client.cc  tcp_client.h  tcp_server.cc  tcp_server.h  tcp_socket.cc  tcp_socket.h  thread_pool.cc  thread_pool.h  write_loop.cc  write_loop.h
transgate/utils/: buffer.h  char_buffer.cc  char_buffer.h  concurrency_proxy.h  file_proxy.cc  file_proxy.h  file_reader.cc  file_reader.h  heap_buffer.cc  heap_buffer.h  read_only_buffer.h  readable_buffer.h  string_view.cc  string_view.h
transgate_old/: README.md
transgate_old/src/config/: config.hpp  http.json  transgate.json
transgate_old/src/core/: Makefile  transgate.cpp  transgate.h
transgate_old/src/http_parser/: http_parser.c
transgate_old/src/interface/: linuxfile.hpp
transgate_old/src/protocol/: http_err.hpp  http_parser.hpp  http_request.hpp  http_response.hpp  http_types.hpp  pfastcgi.hpp
transgate_old/src/utils/: bytes.hpp  debug.hpp  epoll.hpp  epoll_event.hpp  rofile.hpp  sockets.hpp
